// 指定的当前proto语法的版本，有2和3
syntax = "proto3";

// 指定文件生成出来的package
package vpc;

//专有网络相关服务
service VpcService {
  //创建vpc
  rpc CreateVpc(CreateVpcReq) returns(VpcRes);
  //查看vpc信息
  rpc GetVpcInfo(GetVpcInfoReq) returns(VpcRes);
  //修改vpc信息
  rpc SetVpcInfo(SetVpcInfoReq) returns(VpcRes);
}

message VpcRes {
  int32 code = 1;
  string msg = 2;
  message Vpc {
    string vpc_id = 1;
    string vpc_name = 2;
    string vpc_desc = 3;
    string region = 4;
    message Subnet {
      string subnet = 1;
      string subnet_id = 2;
      string subnet_created_time = 3;
    }
    repeated Subnet subnet = 5;
    string vpc_status = 6;
    string vpc_created_time = 7;
    message Router {
      string router_id = 1;
      string router_name = 2;
      string router_created_time = 3;
      message Intf {
        string intf_id = 1;
        string intf_name = 2;
        string intf_ip = 3;
        string subnet_id = 4;
        string intf_created_time = 5;
      }
      repeated Intf Intfs = 4;
    }
    Router router = 8;
  }
  Vpc vpc = 3;
}

message CreateVpcReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string vpc_name = 4;
  string vpc_desc = 5;
  string region = 6;
  string subnet = 7;
}

message GetVpcInfoReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string vpc_id = 4;
}

message SetVpcInfoReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string vpc_id = 4;
  string vpc_name = 5;
  string vpc_desc = 6;
}












